# delta-kernel-rs

./: Cargo.toml
ffi/src/: schema.rs
kernel/: Cargo.toml
kernel/src/: table_configuration.rs  transaction.rs
kernel/src/engine/: arrow_conversion.rs  arrow_data.rs  arrow_utils.rs  ensure_data_types.rs  mod.rs  parquet_row_group_skipping.rs
kernel/src/engine/arrow_expression/: mod.rs
kernel/src/engine/parquet_row_group_skipping/: tests.rs
kernel/src/expressions/: scalars.rs
kernel/src/scan/: mod.rs
kernel/src/schema/: mod.rs  variant_utils.rs
kernel/src/table_changes/: mod.rs
kernel/src/table_features/: mod.rs  variant_type.rs
kernel/tests/: write.rs
kernel/tests/common/: mod.rs
test-utils/src/: lib.rs
variant/: Cargo.toml
variant/src/: json.rs  lib.rs  memory_allocator.rs  variant_buffer_manager.rs  variant_utils.rs
