[package]
name = "variant"
description = "Low-level library related to the Variant data type."
edition = "2021"

[dependencies]
# "arbitrary_precision" allows us to manually parse numbers. "preserve_order" does not automatically
# sort object keys
serde_json = { version = "1.0", features = ["arbitrary_precision", "preserve_order"] }

[lib]
crate-type = ["lib"]
